--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,3 +1,21 @@
+@use '../layout/content' as *;
+
 #about-page {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: $max-width;
+    margin: 50px;
+}
+
+#about-page > h2, #about-page > h3 {
+    margin-top: 30px;
+}
+
+@media(max-width: 768px) {
+
+    #about-page > h2, #about-page > h3 {
+        text-align: center;
+    }
+
 }
