--- a/src/scss/pages/_settings.scss
+++ b/src/scss/pages/_settings.scss
@@ -1,3 +1,6 @@
 #settings-page {
-    margin: 20px;
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
